--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -17,11 +17,12 @@
     <div class="cards">
       <% @list.bookmarks.each do |b| %>
 
-      <%= cl_image_tag("rb.jpg", width: 400, height: 300, crop: :fill) %>
-          <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+             <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3))">
+             <%= cl_image_tag("rb.jpg", width: 200, height: 200, crop: :fill) %>
+             </div>
             <div class="card-product-infos"><%= "#{b.movie.title} - #{b.comment} - " %><%= link_to "delete", bookmark_path(b), method: :delete %></div>
 
-       </div>
+
 
       <% end %>
 
@@ -35,8 +36,8 @@
     <p>Product description with <strong>relevant info</strong> only.</p>
   </div>
 </div> -->
-<div class="cards">
+<!-- <div class="cards">
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
     Breakfast
   </div>
-
+ -->
